concord_macros/tests/trybuild/fail/codegen/reserved_bytes_unsupported.stderr
error: `Bytes` endpoint I/O is reserved but not supported yet
 --> tests/trybuild/fail/codegen/reserved_bytes_unsupported.rs:8:12
  |
8 |         -> Bytes
  |            ^^^^^
